--- a/Robo/templated-theory/index.html
+++ b/Robo/templated-theory/index.html
@@ -18,7 +18,8 @@
 				<div class="inner">
 					<a href="index.html" class="logo">ROBOTICS</a>
 					<nav id="nav">
-						<a href="https://github.com/Bjarkikop/rob2b3u/wiki/Forritunarreglur">Forritunarreglur</a>
+						<a href="https://github.com/Bjarkikop/rob2b3u/wiki/Forritunarreglur">Forritunarreglur git</a>
+						<a href="">Forritunarreglur vef</a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
